# lizard

./: .gitignore  CMakeLists.txt  README.md  conanbuildinfo.cmake  conanfile.py  conaninfo.txt  lizard-config.cmake.in
app/: .gitignore  CMakeLists.txt  lizard.c  sample.7z
fuzzing/: CMakeLists.txt  FuzzLizard.cpp
include/lizard/: LzJson.h  lizard.h
src/: CMakeLists.txt  LzArchive.c  LzEnv.c  LzFile.c  LzHttp.c  LzJson.c  LzMain.c  LzPath.c  LzUnicode.c  LzUnicode.h  LzWindows.c  lizard.c
src/lzma/: 7zMemInStream.c  7zMemInStream.h  Bcj2Enc.c  CMakeLists.txt  Lzma2Enc.c
