
set(MODULE_NAME "lizard-lzma")
set(MODULE_PREFIX "LIZARD-LZMA")

set(${MODULE_PREFIX}_HEADERS
	7z.h
	7zAlloc.h
	7zBuf.h
	7zCrc.h
	7zFile.h
	7zMemInStream.h
	7zTypes.h
	7zVersion.h
	Aes.h
	Alloc.h
	Bcj2.h
	Bra.h
	Compiler.h
	CpuArch.h
	Delta.h
	DllSecur.h
	LzFind.h
	LzFindMt.h
	LzHash.h
	Lzma2Dec.h
	Lzma2Enc.h
	Lzma86.h
	LzmaDec.h
	LzmaEnc.h
	LzmaLib.h
	MtCoder.h
	Ppmd.h
	Ppmd7.h
	Precomp.h
	RotateDefs.h
	Sha256.h
	Sort.h
	Threads.h
	Xz.h
	XzCrc64.h
	XzEnc.h
	)

set(${MODULE_PREFIX}_SOURCES
	7zAlloc.c
	7zArcIn.c
	7zBuf.c
	7zBuf2.c
	7zCrc.c
	7zCrcOpt.c
	7zDec.c
	7zFile.c
	7zMemInStream.c
	7zStream.c
	Aes.c
	AesOpt.c
	Alloc.c
	Bcj2.c
	Bcj2Enc.c
	Bra.c
	Bra86.c
	BraIA64.c
	CpuArch.c
	Delta.c
	DllSecur.c
	LzFind.c
	LzFindMt.c
	Lzma2Dec.c
	Lzma2Enc.c
	Lzma86Dec.c
	Lzma86Enc.c
	LzmaDec.c
	LzmaEnc.c
	LzmaLib.c
	MtCoder.c
	Ppmd7.c
	Ppmd7Dec.c
	Ppmd7Enc.c
	Sha256.c
	Sort.c
	Threads.c
	Xz.c
	XzCrc64.c
	XzCrc64Opt.c
	XzDec.c
	XzEnc.c
	XzIn.c
	)

add_library(${MODULE_NAME} STATIC ${${MODULE_PREFIX}_SOURCES} ${${MODULE_PREFIX}_HEADERS})
